--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\Code212-PC17\AppData\Local\Programs\Python\Python312
+home = C:\Users\HP\AppData\Local\Programs\Python\Python39
 include-system-site-packages = false
-version = 3.12.5
-executable = C:\Users\Code212-PC17\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Code212-PC17\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Code212-PC17\Desktop\MediMind\myenv
+version = 3.9.13
